PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016, PHP 7.1.0beta1

07 Jul 2016, PHP 7.1.0alpha3

- Core:
  . Implemented RFC: Iterable. (Aaron Piotrowski)
  . Fixed bug #72523 (dtrace issue with reflection (failed test)). (Laruence)
  . Fixed bug #72508 (strange references after recursive function call and
    "switch" statement). (Laruence)
  . Implemented RFC: Closure::fromCallable (Danack)

- COM:
  . Fixed bug #72498 (variant_date_from_timestamp null dereference). (Anatol)

- CURL:
  . Add curl_multi_errno(), curl_share_errno() and curl_share_strerror()
	functions. (Pierrick)
  . Add support for HTTP/2 Server Push (davey)

- Date:
  . Invalid serialization data for a DateTime or DatePeriod object will now
    throw an instance of Error from __wakeup() or __set_state() instead of
    resulting in a fatal error. (Aaron Piotrowski)
  . Timezone initialization failure from serialized data will now throw an
    instance of Error from __wakeup() or __set_state() instead of resulting in
    a fatal error. (Aaron Piotrowski)
  . Export date_get_interface_ce() for extension use. (Jeremy Mikola)

- DBA:
  . Data modification functions (e.g.: dba_insert()) now throw an instance of
    Error instead of triggering a catchable fatal error if the key is does not
    contain exactly two elements. (Aaron Piotrowski)

- DOM:
  . Invalid schema or RelaxNG validation contexts will throw an instance of
    Error instead of resulting in a fatal error. (Aaron Piotrowski)
  . Attempting to register a node class that does not extend the appropriate
    base class will now throw an instance of Error instead of resulting in a
    fatal error. (Aaron Piotrowski)
  . Attempting to read an invalid or write to a readonly property will throw
    an instance of Error instead of resulting in a fatal error. (Aaron
    Piotrowski)

- GD: